fixed spacing between blocks in contact information [#507]

--- a/src/sass/running/_footer.scss
+++ b/src/sass/running/_footer.scss
@@ -144,4 +144,9 @@
 			@include container;
 		}
 	}
+
+	&__address,
+	&__phone {
+		margin-bottom: 1rem;
+	}
 }
